FX-274: tooltip visibility issue fixed
git-svn-id: http://svn.flexive.org/repository/flexive/trunk@571 d35d4baa-7912-0410-b0ae-edacad209e15

--- a/src/ui/jsf-components/resources/weblets/com/flexive/faces/weblets/css/components.css
+++ b/src/ui/jsf-components/resources/weblets/com/flexive/faces/weblets/css/components.css
@@ -282,18 +282,18 @@ div.formRow {
     padding: 2px;
 }
 
-div.formLabel {
+div.formLabelContainer {
     float: left;
     margin-top: 2px;
     margin-right: 3px;
     width: 120px;
     padding: 2px;
-
     white-space: nowrap;
-    overflow: hidden;
 }
 
-div.formLabel label {
+div.formLabel {
+    width: 100%;
+    overflow: hidden;
     white-space: normal;
 }
 
